--- a/Works/modulo_2/Desafio/index.html
+++ b/Works/modulo_2/Desafio/index.html
@@ -11,7 +11,8 @@
             <a href="https://discordapp.com/invite/gCRAFhc">Comunidade</a>
             <a href="mailto:oi@rocketseat.com.br">Email</a>
             <a href="tel:+5547992078767">Telefone</a>
-            <a href="/Desafio/sobrePage/sobre.html">Sobre</a>
+            <a href="sobrePage/sobre.html">Sobre</a>
+            <a href="conteudosPage/conteudos.html">Conteúdos</a>
         </div>
     </header>
 
