--- a/Works/modulo_2/Desafio/sobrePage/sobre.html
+++ b/Works/modulo_2/Desafio/sobrePage/sobre.html
@@ -7,6 +7,16 @@
         <script src="https://kit.fontawesome.com/b60f0c27d4.js" crossorigin="anonymous"></script>
     </head>
 
+    <header>
+        <div>
+            <a href="https://discordapp.com/invite/gCRAFhc">Comunidade</a>
+            <a href="mailto:oi@rocketseat.com.br">Email</a>
+            <a href="tel:+5547992078767">Telefone</a>
+            <a href="sobre.html">Sobre</a>
+            <a href="../conteudosPage/conteudos.html">Conteúdos</a>
+        </div>
+    </header>
+
     <body>
         <div class="main">
             <img src="../images/logo.png" alt="logo_rocketseat">
