--- a/Works/modulo_2/Desafio/sobrePage/sobre.html
+++ b/Works/modulo_2/Desafio/sobrePage/sobre.html
@@ -9,6 +9,7 @@
 
     <header>
         <div>
+            <a href="../index.html">Home</a>
             <a href="https://discordapp.com/invite/gCRAFhc">Comunidade</a>
             <a href="mailto:oi@rocketseat.com.br">Email</a>
             <a href="tel:+5547992078767">Telefone</a>
